--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Marcelo Olivares
-logo: /assets/img/logo.png
+logo: /assets/img/personalphoto_DII.jpg
 description: My personal academic webpage.
 show_downloads: true
 google_analytics:
