Updated to Dinky theme
Changed to Dinky theme and edited the default.html style sheet

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Marcelo Olivares
 logo: /assets/img/personalphoto_DII.jpg
-description: My personal academic webpage.
+description: Academic webpage.
 show_downloads: no
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-dinky
 kramdown:
   input: Kramdown
