Update bio description below profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Marcelo Olivares"
   pronouns         : # example: "she/her"  
-  bio              : "Associate Professor in the School of Economics and Business at the University of Chile and researcher at Instituto Sistemas Complejos de Ingenieria. Associate Adjunct Professor at Columbia Business School."
+  bio              : "Professor in the School of Economics and Business at the University of Chile\nAssociate Adjunct Professor at Columbia Business School"
   location         : "Santiago, Chile"
   employer         : "University of Chile"
   uri              : # URL
